--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   go_router:  # for Routing
   mobile_scanner: ^3.5.0 # for scanning qr code
+  simple_ripple_animation: ^0.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -63,6 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/pictures/
     - assets/pictures/menu/
     - assets/pictures/collectionSettlement/
 
