--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   go_router:  # for Routing
   mobile_scanner: ^3.5.0 # for scanning qr code
   simple_ripple_animation: ^0.1.0
+  slide_to_act: 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
